Added % of Total Rides by City Type

--- a/Pyber_ride_data.ipynb
+++ b/Pyber_ride_data.ipynb
@@ -2166,7 +2166,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "e2baedfe",
+   "id": "e6060215",
    "metadata": {},
    "outputs": [
     {
@@ -2189,7 +2189,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "e146ad2b",
+   "id": "c141be41",
    "metadata": {},
    "outputs": [
     {
@@ -2216,7 +2216,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "12762474",
+   "id": "648872d4",
    "metadata": {},
    "outputs": [
     {
@@ -2243,7 +2243,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "2c3099fe",
+   "id": "276719e7",
    "metadata": {},
    "outputs": [
     {
@@ -2277,8 +2277,83 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 61,
+   "id": "d6bee3a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "type\n",
+       "Rural        125\n",
+       "Suburban     625\n",
+       "Urban       1625\n",
+       "Name: ride_id, dtype: int64"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum_rides_type = pyber_data_df.groupby([\"type\"]).count()[\"ride_id\"]\n",
+    "sum_rides_type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "69cb61f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2375"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum_totalRides = pyber_data_df[\"ride_id\"].count()\n",
+    "sum_totalRides"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "bd1048d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "type\n",
+       "Rural        5.263158\n",
+       "Suburban    26.315789\n",
+       "Urban       68.421053\n",
+       "Name: ride_id, dtype: float64"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the percentage of rides for each city type.\n",
+    "ride_percents = 100 * sum_rides_type / sum_totalRides\n",
+    "ride_percents"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "56e51487",
+   "id": "2b39bd76",
    "metadata": {},
    "outputs": [],
    "source": []
